# plover-polaroid

./: .gitignore  MANIFEST.in  README.rst  pyuic.json  requirements-dev.txt  setup.cfg  setup.py
plover_polaroid/: __init__.py  layout_display.ui  plover_polaroid.py  plover_polaroid.py.autosave  plover_polaroid.ui
plover_polaroid/resources/: resources.qrc
