[metadata]
name = plover_polaroid
version = 0.1.0
description = Print your Plover notes to a thermal receipt tape printer
long_description = file: README.rst
author =  Stanley Sakai
author_email =  stanley@stanographer.com
license = GNU General Public License v2 or later (GPLv2+)
url = https://github.com/stanographer/plover-polaroid
classifiers =
        Development Status :: 4 - Beta
        Environment :: Plugins
        Intended Audience :: End Users/Desktop
        License :: OSI Approved :: GNU General Public License v2
        Operating System :: OS Independent
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.4
        Programming Language :: Python :: 3.5
        Programming Language :: Python :: 3.6
keywords = plover plover_plugin

[options]
zip_safe = True
install_requires =
        plover>=4.0.0.dev8
packages =
        plover_polaroid

[options.entry_points]
plover.gui.qt.tool =
        plover_polaroid = plover_polaroid.plover_polaroid:PloverPolaroid